feat(home): add hero image and wire up

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </ul>
       </nav>
 
-      <address class="footer-contact" aria-label="Contact" style="all: unset; display: block;">
+      <address class="footer-contact" aria-label="Contact">
         <ul role="list">
           <li>
             <a href="tel:+2348154986548" aria-label="Call +234 815 498 6548">
